Aligning styles with each other, fixing dropdown overlap.

--- a/assets/style/style_about.css
+++ b/assets/style/style_about.css
@@ -23,8 +23,11 @@
     height: auto; /* Behält das Seitenverhältnis bei */
     border-bottom: solid;
     border-bottom-width: 1px;
+    border-color:black;
 }
 
-
+footer li {
+    filter: invert();
+}
 
 
